fix: watermark: for closed item, make it more visible

--- a/views/js/runner/plugins/security/scss/watermark.scss
+++ b/views/js/runner/plugins/security/scss/watermark.scss
@@ -53,6 +53,11 @@
             }
         }
     }
+
+    /* if item is behind overlay, make watermark brighter */
+    &.overlayed > div {
+        opacity: 0.5 !important;
+    }
 }
 
 .tao-wmark-input {
